aws_eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-app
  namespace: banking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bank-app
  template:
    metadata:
      labels:
        app: bank-app
    spec:
      serviceAccountName: bank-app
      containers:
        - name: bank-app
          image: 292195077353.dkr.ecr.ap-southeast-1.amazonaws.com/apps-crud-bank-prod-repo:model-file-fix
          ports:
            - containerPort: 8080
