aws_eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-app
  namespace: banking
spec:
  selector:
    app: bank-app
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
